@@ -544,7 +544,7 @@
  * CONNECTTIMEOUT - 10 seconds for its host to respond to an ident lookup
  * query and for a DNS answer to be retrieved.
  */
-#define	CONNECTTIMEOUT	60	/* Recommended value: 60 */
+#define	CONNECTTIMEOUT	30	/* Recommended value: 60 */
 
 /*
  * Max time from the nickname change that still causes KILL
