@@ -184,12 +184,12 @@ char *unrealcredits[] =
 	"zero9000, #wIRCd@DALnet, comstud, dog3, Dianora, Isomer, and others who arent listed here:)",
 	"",
 	"------------------------------------------------------",
-	"Unreal 3.0, and 3.1 and up is dedicated to Morrigan - Julie Frederiksen",
-	"- a girl who have helped me through anything in my life, hugging",
+	"Unreal 3.0, 3.1, 3.1.1 and up is dedicated to Morrigana",
+	"- Julie F., a girl who have helped me through anything in my life, hugging",
 	"me at the right times, a definate dedication. Thanks for the kisses",
 	"long phonetalks, waste of my mobilephone ;), crying together",
 	"and making life go on for us both. I will never forget you",
-	"never leave you, love ya forever",
+	"never leave you, love ya forever. ",
 	"------------------------------------------------------",
 	"This IRCd is dedicated to the love that has always been",
 	"and will always be there - Thanks to the girls & friends that kept me up",
@@ -247,6 +247,8 @@ char *dalinfotext[] =
 	"RogerY       Roger Y.                 rogery@austnet.org",
 	"GZ                                    gz@starchat.net",
 	"binary                                ",
+	"Dianora      Diane Bruce",
+	"lucas", 
 	"Roar Thronaas <roart@nvg.ntnu.no> added IPv6 support.",
 	"",
 	"",
